--- a/autotest/templates/api/api.html
+++ b/autotest/templates/api/api.html
@@ -264,8 +264,11 @@
                         </div>
                         <div class="form-group row showcase_row_area">
                           <div class="col-md-12 showcase_content_area">
-                            <label>Data <code style="font-size: 10px;">  ——暂时仅支持JSON格式</code></label>
-                            <textarea class="form-control" rows="20" id="requestData" style="font-size: 15px; color: #000000; font-family:courier;">{
+                            <label>
+                              Data
+                              <code style="font-size: 10px;">  ——暂时仅支持JSON格式</code>
+                            </label>
+                            <textarea class="form-control" rows="16" id="requestData" style="font-size: 15px; color: #000000; font-family:courier;">{
     "opera": "test",
     "userid": 10000,
     "username": "tester",
@@ -293,24 +296,50 @@
                       <div class="col-md-11 mx-auto">
                         <div class="form-group row showcase_row_area">
                           <div class="col-md-12 showcase_content_area">
-                            <label>随机次数</label>
                             <label>
+                              随机次数
                               <input type="" name="randomTimes" id="randomTimes" value="0" style="width: 70px;">
-                            </label>
-                            <label>发送方式</label>
-                            <label>
                               <select id="sendType" name="sendType" >
                                 <option>synchronous</option>
                                 <option>asynchronous</option>
-                              </select>
+                              </select><code style="font-size: 10px;">  ——当随机次数较多时, 建议使用异步模式</code>
                             </label>
-                            <label><code style="font-size: 10px;">  ——当随机次数较多时, 建议使用异步模式</code></label>
                             <textarea class="form-control" rows="15" id="randomData" style="font-size: 15px; color: #000000; font-family:courier">// 若要添加带有&,'" ():|字符的测试数据, 需要在字符前添加\
 // string类型的测试数据, 需以''包裹
 // random_between, 从1至100随机取值, 仅用于int/float类型
 userid: random_between(1, 100)
 // random_in, 从各个值中随机取值
 username: random_in('t', 't\,e', 'tes', 'te\ st', 'te\(ste', 'tes\)ter','tes\&ter','tes\:ter')
+// x|y, 在{'x':{'y': z}}中改变z的值; in_order, 按顺序取值
+child\|data|info: in_order(true, 'true', 'True', false, 'false', 'False')
+// in_order, 按顺序取值
+remember: in_order(true, false)
+</textarea>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="grid-body py-3" id="fullTitle">
+                    <div class="split-header">
+                      <p class="card-title">Full Test</p>
+                        <button type="button" class="btn btn-trasnparent action-btn btn-xs component-flat pr-0" id="removeFull">
+                          <i class="mdi mdi-window-close text-muted mdi-2x"></i>
+                        </button>
+                    </div>
+                  </div>
+                  <div class="vertical-timeline-wrapper" id="fullWrapper">
+                    <div class="row mb-3">
+                      <div class="col-md-11 mx-auto">
+                        <div class="form-group row showcase_row_area">
+                          <div class="col-md-12 showcase_content_area">
+                            <label>
+                              全量发送
+                              <input type="checkbox" name="fullTest" id="fullTest" style="width: 20px;">
+                              <code style="font-size: 10px;">  ——仅支持in_order方法, 以异步方式发送所有组合</code>
+                            </label>
+                            <textarea class="form-control" rows="15" id="fullData" style="font-size: 15px; color: #000000; font-family:courier">// 若要添加带有&,'" ():|字符的测试数据, 需要在字符前添加\
+// string类型的测试数据, 需以''包裹
 // x|y, 在{'x':{'y': z}}中改变z的值; in_order, 按顺序取值
 child\|data|info: in_order(true, 'true', 'True', false, 'false', 'False')
 // in_order, 按顺序取值
